# kokkos-staging-space

./: CMakeLists.txt  README.md
cmake/: KokkosStagingConfig.cmake.in
cmake/Modules/: FindDataSpaces.cmake
evaluation/: CMakeLists.txt  test_reader.cpp  test_reader.hpp  test_reader_scav4.cpp  test_reader_scav4.hpp  test_subset_reader.cpp  test_subset_reader.hpp  test_writer.cpp  test_writer.hpp  timer.hpp
src/staging/: Kokkos_StagingSpace.cpp  Kokkos_StagingSpace.hpp  Kokkos_StagingSpace_CopyViews.hpp  Kokkos_StagingSpace_SharedAlloc.hpp  Kokkos_StagingSpace_ViewMapping.hpp  Kokkos_Staging_API.hpp
tests/: CMakeLists.txt  Test_DeepCopy.cpp  Test_DeepCopy_Layout.cpp  Test_Main.cpp
